2019-02-25         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Set ZOS_FAIL if on ZOS to improve test suite on that
	platform.
	* awk.h (is_valid_identifier): Move declaration outside ifdef DYNAMIC.
	* command.y: Fix test for EBCDIC to use USE_EBCDIC.
	* custom.h: Remove definitions of __builtin_expect.
	* eval.c (update_ERRNO_string): Add untested and disabled code for z/OS
	to remove leading IBM error codes.  This might one day make more of the
	tests pass on z/OS.

2019-02-20         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (is_valid_identifier): Move declaration outside of
	`#if DYNAMIC'.  Thanks to Daniel Richard G.
	* custom.h (builtin_expect): Remove definitions, now
	handled by support/cdefs.h.

2019-02-17         Arnold D. Robbins     <arnold@skeeve.com>

	Fix debugger eval command so that return from a called
	user-defined function works. Thanks to Lothar Langer
	<lotharla@gmail.com> for the report.

	* awk.h (Op_K_return_from_eval): New opcode.
	(parse_program): Add boolean second parameter, `from_eval'.
	* awkgram.y (called_from_eval): New variable
	(Grammar): Check it for return statements. If true, change the
	opcode to Op_K_return_from_eval.
	(parse_program): Set called_from_eval to value of from_eval parameter.
	* debug.c (pre_execute_code): Change test for Op_K_return to test
	for Op_K_return_from_eval.
	(do_eval): Call parse_program with second parameter true.
	* eval.c (optypetab): Add entry for Op_K_return_from_eval.
	* interpret.h (r_interpret): Ditto: can't-happen error.
	* main.c (main): Call parse_program with second parameter false.
	* NEWS: Updated.

2019-02-15         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y: If profiling, correctly turn `print' into `print $0'.
	Thanks to Hermann Peifer for the bug report.
	* TODO: Updated.

2019-02-11         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Update version for next test tarball.
