@@ -46,7 +46,7 @@ function awk::getpwuid(uid)
 function Init(oldfs, oldrs, olddol0, pwcat, using_fw, using_fpat)
 {
 	if (Inited) {
-		return 
+		return
 	}
 	oldfs = FS
 	oldrs = RS
