@@ -1,5 +1,9 @@
 2019-02-25         Arnold D. Robbins     <arnold@skeeve.com>
 
+	* nsprof2.ok, profile5.ok: Updated after code changes.
+
+2019-02-25         Arnold D. Robbins     <arnold@skeeve.com>
+
 	* Makefile.am (EXPECTED_FAIL_ZOS): New group of tests expected to
 	fail on ZOS.
 	(ZOS_FAIL): New macro set by autoconf.
